--- a/ExpenseTracker/index.html
+++ b/ExpenseTracker/index.html
@@ -38,18 +38,14 @@
                         <th class="emptyHeading"></th>
                     </thead>
                     <tbody class="tableBody">
-                        <tr class="expenses">
+                        <!--
+                                                    <tr class="expenseLog">
                             <td class="expenseDate"> 09/12/2022</td>
                             <td class="expenseDesc">Macbook Air Laptop</td>
                             <td class="expenseAmount">1800</td>
-                            <td class="actionButton"><Button>Delete</Button></td>
+                            <td class="deleteData"><Button class="deleteButton">Delete</Button></td>
                         </tr>
-                        <tr class="expenses">
-                            <td class="expenseDate"> 09/12/2022</td>
-                            <td class="expenseDesc">Macbook Air Laptop</td>
-                            <td class="expenseAmount">1800</td>
-                            <td class="actionButton"><Button>Delete</Button></td>
-                        </tr>
+                        -->
                     </tbody>
                 </table>
             </div>
