Add Seconds Label & Fix Incorrect Class Names

--- a/TripCountdownTimer/index.html
+++ b/TripCountdownTimer/index.html
@@ -24,9 +24,10 @@
                 </div>
                 <div class="countDownTime">
                     <h3 class="weeksLabel">Weeks: <span class="weeksAmount"></span></h3>
-                    <h3 class="weeksLabel">Days: <span class="daysAmount"></span></h3>
+                    <h3 class="DaysLabel">Days: <span class="daysAmount"></span></h3>
                     <h3 class="weeksLabel">Hours: <span class="hoursAmount"></span></h3>
-                    <h3 class="weeksLabel">Minutes: <span class="minutesAmount"></span></h3>
+                    <h3 class="minutesLabel">Minutes: <span class="minutesAmount"></span></h3>
+                    <h3 class="secondsLabel">Seconds: <span class="secondsAmount"></span></h3>
                 </div>
             </div>
         </div>
