Wrap timer label and value

--- a/TripCountdownTimer/index.html
+++ b/TripCountdownTimer/index.html
@@ -23,11 +23,30 @@
                     <h2>Tue, 7 February 2023</h2>
                 </div>
                 <div class="countDownTime">
-                    <h3 class="weeksLabel">Weeks: <span class="weeksAmount"></span></h3>
-                    <h3 class="DaysLabel">Days: <span class="daysAmount"></span></h3>
-                    <h3 class="weeksLabel">Hours: <span class="hoursAmount"></span></h3>
-                    <h3 class="minutesLabel">Minutes: <span class="minutesAmount"></span></h3>
-                    <h3 class="secondsLabel">Seconds: <span class="secondsAmount"></span></h3>
+                    <div class="counteritem">
+                        <h3 class="weeksLabel label">Weeks:</h3>
+                        <span class="weeksAmount"></span>
+                    </div>
+                    <div class="counteritem">
+                        <h3 class="DaysLabel label">Days:</h3>
+                        <span class="daysAmount"></span>
+                    </div>
+                    <div class="counteritem">
+                        <h3 class="weeksLabel label">Hours: </h3>
+                        <span class="hoursAmount"></span>
+                    </div>
+                    <div class="counteritem">
+                        <h3 class="minutesLabel label">Minutes: </h3>
+                        <span class="minutesAmount"></span>
+
+                    </div>
+                    <div class="counteritem">
+                        <h3 class="secondsLabel label">Seconds: </h3>
+                        <span class="secondsAmount"></span>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
