Add NavBar HTML

--- a/ParallaxEffect/Index.html
+++ b/ParallaxEffect/Index.html
@@ -8,16 +8,26 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="mainBackground">
-            <h1> This is</h1>
+            <nav class="navBar">
+                <div class="header"> <h1>j.morian</h1></div>
+                <div class="toggleMenu"><svg class="toggle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg></div>
+                <ul class="navList">
+                    <li><a href="#"> About Me </a></li>
+                    <li><a href="#"> Projects </a></li>
+                    <li><a href="#"> Contact </a></li>
+                </ul>
+            </nav>
+            <h1> Hello , World</h1>
         </div>
         <div class="secondaryBackground">
-            <h1> Called </h1>
+            <h1> Welcome. </h1>
         </div>
         <div class="otherBackground">
-            <h1> Parallax Effect</h1>
+            <h1> : )</h1>
         </div>
     </body>
 </html>
