Add Classes to Buttons

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -14,29 +14,29 @@
 
         <div class="calculator">
             <div class="displayBox">
-                <input type="value"  class="result"readonly>
+                <input type="text"  class="result"readonly>
 
             </div>
             <div class="buttons">
                 <ul class="buttonList">
-                    <li class="AC">AC</li>
-                    <li class="DEL">DEL</li>
-                    <li>/</li>
-                    <li>*</li>
-                    <li>+</li>
-                    <li>-</li>
-                    <li class="equalSign">=</li>
-                    <li>9</li>
-                    <li>8</li>
-                    <li>7</li>
-                    <li>6</li>
-                    <li>5</li>
-                    <li>4</li>
-                    <li>3</li>
-                    <li>2</li>
-                    <li>1</li>
-                    <li>0</li>
-                    <li class="pointSign">.</li>
+                    <li class="acBtn">AC</li>
+                    <li class="delBtn">DEL</li>
+                    <li class="divideBtn">/</li>
+                    <li class="multiplyBtn">*</li>
+                    <li class="plusBtn">+</li>
+                    <li class="minusBtn">-</li>
+                    <li class="equalBtn">=</li>
+                    <li class="nineBtn" data-value="9">9</li>
+                    <li class="eightBtn">8</li>
+                    <li class="sevenBtn">7</li>
+                    <li class="sixBtn">6</li>
+                    <li class="fiveBtn">5</li>
+                    <li class="fourBtn">4</li>
+                    <li class="threeBtn">3</li>
+                    <li class="twoBtn">2</li>
+                    <li class="oneBtn">1</li>
+                    <li class="zeroBtn">0</li>
+                    <li class="pointbtn">.</li>
                 </ul>
 
             </div>
