--- a/MyWebsite02/index.html
+++ b/MyWebsite02/index.html
@@ -64,11 +64,22 @@
             </div>
 
         </section>
-        <section class="projects">
+        <section class="aboutMe">
+            <div class="aboutMeContent">
+                <h2> About Me</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit illo dolor eius quo distinctio itaque porro, totam tempora, sapiente impedit placeat? Qui aliquam non quae cum! Nisi alias eaque laudantium, quae molestias dolorum accusamus quia minima ut a porro officia animi magni eos veritatis consequatur eveniet corrupti repellat tenetur blanditiis.</p>
+
+            </div>
         </section>
-        <section class="Contact">
+        <section class="porfolio">
+
+            <div class="portfolioContent">
+                <h2> Projects</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit illo dolor eius quo distinctio itaque porro, totam tempora, sapiente impedit placeat? Qui aliquam non quae cum! Nisi alias eaque laudantium, quae molestias dolorum accusamus quia minima ut a porro officia animi magni eos veritatis consequatur eveniet corrupti repellat tenetur blanditiis.</p>
+            </div>
         </section>
     </main>
+
 
     <script src="app.js" defer></script>
 </body>
