Add Footer and Contact Section
Refactor Class names and Add ID's

--- a/MyWebsite02/index.html
+++ b/MyWebsite02/index.html
@@ -20,17 +20,17 @@
         <nav class="navBar">
             <ul class="navList">
                 <li class="navItems">
-                    <a class="navLinks" href="#"> About Me</a>
+                    <a class="navLinks" href="#aboutMe"> About Me</a>
                 </li>
                 <li class="navItems">
-                    <a class="navLinks" href="#">Projects</a>
+                    <a class="navLinks" href="#portfolio">Projects</a>
                 </li>
                 <li class="navItems">
                     <a class="navLinks" href="#">Contact</a>
                 </li>
                 <li class="navItems socials">
                     <div class="socialIcons">
-                        <a class="navLinks" href="#">
+                        <a class="navLinks" href="https://github.com/ejmorian" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                                 <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                                 <path
@@ -38,7 +38,7 @@
                             </svg>
                         </a>
 
-                        <a class="navLinks" href="#">
+                        <a class="navLinks" href="https://twitter.com/_jmorian" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 
                                 <path
@@ -57,30 +57,36 @@
             </svg>
         </div>
     </div>
-    <main>
+    <div class="main">
         <section class="mainBanner">
             <div class="mainBannerTitle">
                 <h2>The Future of Web Development</h2>
             </div>
 
         </section>
-        <section class="aboutMe">
-            <div class="aboutMeContent">
-                <h2> About Me</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit illo dolor eius quo distinctio itaque porro, totam tempora, sapiente impedit placeat? Qui aliquam non quae cum! Nisi alias eaque laudantium, quae molestias dolorum accusamus quia minima ut a porro officia animi magni eos veritatis consequatur eveniet corrupti repellat tenetur blanditiis.</p>
-
-            </div>
-        </section>
-        <section class="porfolio">
-
-            <div class="portfolioContent">
-                <h2> Projects</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit illo dolor eius quo distinctio itaque porro, totam tempora, sapiente impedit placeat? Qui aliquam non quae cum! Nisi alias eaque laudantium, quae molestias dolorum accusamus quia minima ut a porro officia animi magni eos veritatis consequatur eveniet corrupti repellat tenetur blanditiis.</p>
-            </div>
-        </section>
-    </main>
-
-
+        <div class="sectionWrapper">
+            <section class="aboutMe" id="aboutMe">
+                <div class="aboutMeContent">
+                    <h2> About Me</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit illo dolor eius quo distinctio itaque porro, totam tempora, sapiente impedit placeat? Qui aliquam non quae cum! Nisi alias eaque laudantium, quae molestias dolorum accusamus quia minima ut a porro officia animi magni eos veritatis consequatur eveniet corrupti repellat tenetur blanditiis.</p>
+    
+                </div>
+            </section>
+            <section class="portfolio" id="portfolio">
+                <div class="portfolioContent">
+                    <h2> Projects</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit illo dolor eius quo distinctio itaque porro, totam tempora, sapiente impedit placeat? Qui aliquam non quae cum! Nisi alias eaque laudantium, quae molestias dolorum accusamus quia minima ut a porro officia animi magni eos veritatis consequatur eveniet corrupti repellat tenetur blanditiis.</p>
+                </div>
+            </section>
+        </div>
+    </div>
+    </div>
+    <div class="contact">
+        <h2>Coming Soon...</h2>
+    </div>
+    <footer>
+        <span class="designBy">designed by: j.morian &#169</span>
+    </footer>
     <script src="app.js" defer></script>
 </body>
 
